fix slider overflow

--- a/src/components/SliderHomeBox/style.module.scss
+++ b/src/components/SliderHomeBox/style.module.scss
@@ -18,4 +18,5 @@
   align-items: center;
   height: 100%;
   justify-content: center;
+  overflow: hidden;
 }
